seed-types: Keep another reference around for seed when handling (transfer full) function arguments

https://bugzilla.gnome.org/show_bug.cgi?id=739879