libseed/seed-closure.c
@@ -193,7 +193,7 @@ seed_handle_closure (ffi_cif * cif, void *result, void **args, gpointer userdata
       exception = 0;
     }
 
-  seed_value_to_gi_argument (ctx, (JSValueRef) return_value, return_type,
+  seed_value_to_gi_argument (ctx, (JSValueRef) return_value, return_type, GI_TRANSFER_NOTHING,
 			 &return_arg, 0);
   switch (return_tag)
     {
