libseed/seed-structs.c
@@ -241,7 +241,7 @@ seed_union_set_property (JSContextRef context,
 
   field_type = g_field_info_get_type (field);
 
-  seed_value_to_gi_argument (context, value, field_type, &field_value, exception);
+  seed_value_to_gi_argument (context, value, field_type, GI_TRANSFER_NOTHING, &field_value, exception);
   ret = g_field_info_set_field (field, priv->pointer, &field_value);
 
   g_base_info_unref ((GIBaseInfo *) field_type);
@@ -283,7 +283,7 @@ seed_struct_set_property (JSContextRef context,
 
   field_type = g_field_info_get_type (field);
 
-  seed_value_to_gi_argument (context, value, field_type, &field_value, exception);
+  seed_value_to_gi_argument (context, value, field_type, GI_TRANSFER_NOTHING, &field_value, exception);
   ret = g_field_info_set_field (field, priv->pointer, &field_value);
 
   if (!ret) 
@@ -785,7 +785,7 @@ seed_construct_struct_type_with_parameters (JSContextRef ctx,
 					  (JSObjectRef) parameters,
 					  jsprop_name, NULL);
 
-      seed_value_to_gi_argument (ctx, jsprop_value, field_type, &field_value,
+      seed_value_to_gi_argument (ctx, jsprop_value, field_type, GI_TRANSFER_NOTHING, &field_value,
 				 exception);
       set_ret = g_field_info_set_field (field, object, &field_value);
 
